Theme and homepage fixes: remove subscribe link, filter posts, style updates, avatar uncropped, title above logo and bold

--- a/themes/mini/layouts/partials/social.html
+++ b/themes/mini/layouts/partials/social.html
@@ -1,6 +1,6 @@
 <div id="social">
 
-{{ range $key, $val := .Site.Social }}
+{{ range $key, $val := .Site.Params.social }}
     <a class="symbol" href="{{ $val }}" rel="me" target="_blank">
         {{ $svg :=  print "svgs/" $key ".svg" }}
         {{ partial $svg (dict "fill" "#bbbbbb" "width" 28 "height" 28 ) }}
