--- a/themes/mini/layouts/partials/footer.html
+++ b/themes/mini/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-    {{ if .Site.Social }}
+    {{ if .Site.Params.social }}
         {{ partial "social.html" . }}
     {{ end }}
 
